--- a/project/lesson/basic/flexbox/flexbox.html
+++ b/project/lesson/basic/flexbox/flexbox.html
@@ -9,29 +9,29 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
+    <div class="wrapper stretch">
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
+        <div class="item2"></div>
     </div>
-    <div class="wrapper column">
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
-        <div class="item1"></div>
+    <div class="wrapper column stretch">
+        <div class="item3"></div>
+        <div class="item3"></div>
+        <div class="item3"></div>
+        <div class="item3"></div>
+        <div class="item3"></div>
     </div>
 
     <div class="container center">
